syntax = "proto3";

option csharp_namespace = "JEasthamDev.Orders";

import "google/protobuf/timestamp.proto";

package order;

service Orders {
  rpc GetOrder (GetOrderRequest) returns (Order);

  rpc ListCustomerOrders (GetCustomerOrdersRequest) returns (ListCustomerOrdersReply);

  rpc CreateNewOrder(CreateOrderRequest) returns (Order);
}

message GetOrderRequest {
  string orderId = 1;
}

message CreateOrderRequest {
  string customerId = 1;
  string postcode = 2;
}

message GetCustomerOrdersRequest {
  string customerId = 1;
}

message ListCustomerOrdersReply {
  repeated Order order = 1;
}

message Order {
  string orderId = 1 [deprecated=true];
  string customerId = 2;
  google.protobuf.Timestamp orderDate = 3;
  string orderNumber = 4;
  float deliveryCharge = 5;
}